--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <table>
+        <tr>
+            <td class="cell" id="0">X</td>
+            <td class="cell" id="1">0</td>
+            <td class="cell" id="2"></td>   
+        </tr>
+        <tr>
+            <td class="cell" id="3"></td>
+            <td class="cell" id="4"></td>
+            <td class="cell" id="5"></td>
+        </tr>
+        <tr>
+            <td class="cell" id="6"></td>
+            <td class="cell" id="7"></td>
+            <td class="cell" id="8"></td>
+        </tr>
+    </table>
+
+    <div class="endgame">
+        <div class="text"></div>
+    </div>
+
+    <button id="replay-btn">Replay</button>
+
+    <script src="index.js"></script>
 </body>
 </html>
